--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-grails/blog/web-app/WEB-INF/classes/
-grails\.metadata
+grails/blog/web-app/WEB-INF/classes
 grails/.metadata
 .lock
 *.log
-
+groovy/bin-groovy
+groovy/build
